Freedom Sanbox Ant Deploy/src/objects/Execution_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Policy_Punch_date__c</fullName>
        <label>Policy Punch date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Status__c</fullName>
        <label>Policy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_document_received__c</fullName>
        <label>Policy document received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_update_date__c</fullName>
        <label>Policy update date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferable_Medical_date__c</fullName>
        <label>Preferable Medical date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Policy_Number__c</fullName>
        <label>Previous Policy Number:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejected_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rejected Tracker</label>
        <referenceTo>Execution_Tracker__c</referenceTo>
        <relationshipLabel>Execution Tracker (Rejected Tracker)</relationshipLabel>
        <relationshipName>Rejected_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark_OpsTeam__c</fullName>
        <label>Remark OpsTeam</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Remark__c</fullName>
        <label>Renewal Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Booked__c</fullName>
        <formula>IF(
     OR(
                      ISPICKVAL (Opportunity_Name__c, &quot;LumpSum&quot;), 
                      ISPICKVAL(Opportunity_Name__c, &quot;Sip&quot;)
           ),
           CASE( 
			Asset_Class_Policy_Type__c,
                        &apos;Equity&apos;,(Actual_Action_Amount__c * 1.25/100) ,
			&apos;Debt&apos;, (Actual_Action_Amount__c * 0.35/100),
			(Actual_Action_Amount__c * 0.35/100)
		     )
                ,
      IF(
		
                    ISPICKVAL (Opportunity_Name__c, &quot;General Insurance&quot;),
			CASE(
				Asset_Class_Policy_Type__c ,
                                &apos;Motor&apos;, (Actual_Action_Amount__c * 10/100) ,
				&apos;Critical Illness&apos;, (Actual_Action_Amount__c * 20/100),
				&apos;Medical&apos;,( Actual_Action_Amount__c * 20/100),
				&apos;Householder&apos;,(Actual_Action_Amount__c * 15/100),
				&apos;Travel&apos;,(Actual_Action_Amount__c * 20/100),
                                &apos;vehicle&apos;,(Actual_Action_Amount__c * 15/100),
                                (Actual_Action_Amount__c * 15/100)
			        ),
             IF(
		
                       ISPICKVAL (Opportunity_Name__c, &quot;Life Insurance&quot;),
			CASE(
				Scheme_Name_Policy_Name__c,
                                &apos;Birla Sun Life&apos;, (Actual_Action_Amount__c * 28 / 100) ,
				&apos;HDFC&apos;, (Actual_Action_Amount__c * 22 / 100),
				&apos;ICICI&apos;,( Actual_Action_Amount__c * 8 / 100),
				&apos;Kotak&apos;,(Actual_Action_Amount__c * 32 / 100),
				&apos;LIC&apos;,(Actual_Action_Amount__c * 19 / 100),
                                (Actual_Action_Amount__c * 20 / 100)
			         ),0


	       )
       )
           
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Booked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revised_Target_Date__c</fullName>
        <label>Revised Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Commencement_Date__c</fullName>
        <label>Risk Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SIP_Installments__c</fullName>
        <label>SIP Installments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STP_Amount_per_transfer__c</fullName>
        <label>STP Amount per transfer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STP_From_Scheme_option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>STP From - Scheme/option</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Execution Tracker (STP From - Scheme/option)</relationshipLabel>
        <relationshipName>Execution_Tracker2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STP_Installments__c</fullName>
        <label>STP Installments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STP_To_Scheme_option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>STP To - Scheme/option</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Execution Tracker (STP To - Scheme/option)</relationshipLabel>
        <relationshipName>Execution_Tracker3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sanctioned_Amount__c</fullName>
        <label>Sanctioned Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheme_Name_Policy_Name__c</fullName>
        <description>Map Scheme name from Mutual Funds and Policy Name if provided for LI and GI</description>
        <label>Scheme Name/Policy Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_Datetime__c</fullName>
        <label>Send Email Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_SMS_Datetime__c</fullName>
        <label>Send SMS Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Insurance_Company__c</fullName>
        <label>Sent to Insurance Company</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_of_Investor__c</fullName>
        <label>Status of Investor</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_Action_Amount__c</fullName>
        <description>Action Amount, SIP Amount from Action Plan will be mapped to this field</description>
        <label>Suggested Action Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suggested_Amount__c</fullName>
        <label>Suggested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Assured__c</fullName>
        <label>Sum Assured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <formula>IF( ISNULL( Revised_Target_Date__c ) , Original_Target_Date__c , Revised_Target_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Revenue__c</fullName>
        <label>Target Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_No_Of_Years__c</fullName>
        <label>Term (No. Of Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Balance__c</fullName>
        <label>Total Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing SIP- COB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold - COB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_date__c</fullName>
        <label>Transaction date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrender Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unique Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAssignedToOps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAssignedToOps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFormProvidedToMET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFormProvidedToMET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTaskAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTaskAssigned</label>
        <type>Checkbox</type>
    </fields>
    <label>Execution Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET#{0000}</displayFormat>
        <label>Execution Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Remarks_Mandatory_when_Status_Cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISBLANK(Remarks__c),  ISPICKVAL(ET_Status__c, &apos;Cancelled&apos;)) , True, False)</errorConditionFormula>
        <errorMessage>Please provide valid Cancellation Remarks to cancel the Execution Tracker.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Moblie_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Mobile__c ))
,
NOT(REGEX( Mobile__c , &quot;[0-9]{10}&quot;)))</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Please Enter Valid 10 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Pan_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK(PAN__c) )
,
NOT(REGEX( PAN__c,  &quot;[A-Za-z]{5}[0-9]{4}[A-z]{1}&quot;))
)</errorConditionFormula>
        <errorDisplayField>PAN__c</errorDisplayField>
        <errorMessage>Please Enter Valid 10 digit Pan No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Second_Pan_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK(PAN_No_Second_holder__c) ) 
, 
NOT(REGEX( PAN_No_Second_holder__c,  &quot;[A-Za-z]{5}[0-9]{4}[A-z]{1}&quot;))
)</errorConditionFormula>
        <errorDisplayField>PAN_No_Second_holder__c</errorDisplayField>
        <errorMessage>Please Enter Valid 10 digit Pan No.</errorMessage>
    </validationRules>
</CustomObject>